Added enemy1 sprites and finished code for shooting

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
                 <p class="Game-Description-Text"><br/>Blast your way through waves of enemies in this arcade-like top down shooter!<br/>You can also collect blue orbs to use later in a shop!</p>
             </div>
             <div class="col-sm">
-                <h2 class="Game-Controls-Title">Game Controls</h2>
+                <h2 class="Game-Controls-Title">Game Controls/Mechanics</h2>
                 <p class="Game-Controls-Text">
                     <ul class=""Game-Controls-Text>
                         <br/>
                         <li>WASD to move</li>
                         <li>Hold Left Mouse to shoot</li>
                     </ul>
+                    <p class="Mechanics-Description">1st ship has increasing fire rate, so the longer you shoot, the faster you will be able to shoot!<br/>
+                    It also has very low damage, so be carefull!
+                    </p>
                 </p>
             </div>
         </div>
