Added a pause feature

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <br/>
                         <li>WASD to move</li>
                         <li>Hold Left Mouse to shoot</li>
+                        <li>Press P to pause the game</li>
                     </ul>
                     <p class="Mechanics-Description">1st ship has increasing fire rate, so the longer you shoot, the faster you will be able to shoot!<br/>
                     It also has very low damage, so be carefull!
